# joytime-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: README.md  build-systems.md
docs/api/: README.md  cpp.md
docs/getting-started/: README.md  build.md  c.md  cpp.md
docs/input-libraries/: README.md  c.md  cpp.md
include/: joytime-core.h  joytime-core.hpp
src/: controller.cpp  joytime-core-wrapper.cpp  joytime-core.cpp  rumble.cpp
